Fixed overlapping navbar while scrolling up on small size with @media use

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -42,6 +42,7 @@ body {
   color: var(--text-color);
   overflow-x: hidden;
   padding-top: 130px;
+  padding-top: var(--navbar-height);
 }
 
 html {
@@ -53,7 +54,8 @@ html {
 }
 
 section {
-  scroll-margin-top: 101px;
+  /* scroll-margin-top: 101px; */
+  scroll-margin-top: var(--navbar-height);
 }
 
 /* Header styles */
@@ -145,8 +147,8 @@ section {
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   grid-gap: 0 4em;
-  padding-top: 15px;
-  padding-top: calc(var(--navbar-height) + 20px);
+  padding-top: 1rem;
+  padding-top: calc(var(--navbar-height) + 1rem);
 }
 
 .home-content {
@@ -1033,6 +1035,7 @@ footer a i {
       --normal-font: 1.8rem;
       --neon-box-shadow: 0 0 0.8rem #12f7ff;
       --h2-font: 3rem;
+      --navbar-height: 120px;
     }
 
     body {
